﻿svs 12.01.2016 22:10:42 +0300 - build 4508

1. SQLite 3.10.0

drkns 11.01.2016 19:50:50 +0200 - build 4507

1. Продолжение 4506.1.

drkns 10.01.2016 17:18:42 +0200 - build 4506

1. В граббер добавлен режим потокового выделения. Переключается пробелом.
   При копировании в буфер производится попытка склеить разбитые свёрткой строки, корректность результата не гарантируется.

2. Из граббера можно выйти по F10.

3. Немного перевода английской справки.

4. Пара мелочей.

drkns 08.01.2016 16:54:54 +0200 - build 4505

1. 003148: При копировании нескольких строк в редакторе FAR и последующей вставке ломается содержимое

drkns 08.01.2016 14:47:08 +0200 - build 4504

1. Немного чёрной магии, чтобы VS2015 билд мог запускаться в Win2k.

drkns 04.01.2016 14:00:46 +0200 - build 4503

1. Продолжение 4502.1.

2. Уточнение 4431.

drkns 03.01.2016 21:18:13 +0200 - build 4502

1. Продолжим рефакторинг буфера обмена.

2. clip(3) и clip(4) похоже, не работали чуть менее, чем совсем.

drkns 01.01.2016 16:05:03 +0200 - build 4501

1. Распространим 4496 и на вертикальные блоки тоже.

2. Размер данных пишем всегда.

drkns 01.01.2016 15:07:30 +0200 - build 4500

1. Убрано дублирование вертикального блока в буфере обмена.

2. Рефакторинг.

zg 31.12.2015 20:03:12 +0200 - build 4499

1. падение в GetPluginDirList. возвращалась освобождённая память.

2. gcc warning.

drkns 30.12.2015 17:05:27 +0200 - build 4498

1. Продолжение 3596. Более параноидальная работа с адаптерами.

drkns 30.12.2015 10:59:13 +0200 - build 4497

1. TinyXML-2 v3.0.0.

2. Пара мелочей.

w17 29.12.2015 13:10:24 +0300 - build 4496

1. Копирование/вставка текста содержащего символ(ы) '\0' в редакторе.
   При копировании текста в буфер обмена, если в нём содержатся нулевые символы,
   создаётся дополнительный 4-х байтовый блок, куда записывается длина текста.
   Тип блока 'Notepad++ binary text length', должен быть совместим с Paste Special notepad++.

drkns 28.12.2015 17:59:08 +0200 - build 4495
